# backend

./: .env  .env.example  .gitignore  Dockerfile  README.md  crud.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  sonar-project.properties
.github/workflows/: build.yml  deploy.yml
kustomize-backend/: backend-deploy.yaml  backend-hpa.yaml  backend-svc.yaml  kustomization.yaml
src/: crud.py  database.py  main.py  models.py  schemas.py  utils.py
tests/: conftest.py  test_main.py
